--- a/flyway/totalcarefix/flyway.conf
+++ b/flyway/totalcarefix/flyway.conf
@@ -1,4 +1,7 @@
-flyway.url=jdbc:mysql://totalcarefix-instance.cannp7gu3dzs.eu-west-1.rds.amazonaws.com:3306/totalcarefixdb
-flyway.user=admin
-flyway.password=12345678
-flyway.locations=filesystem:migrations
+- name: Set up Flyway
+  uses: joshuaavalon/flyway-action@v3.0.0
+  with:
+    url: jdbc:mysql://totalcarefix-instance.cannp7gu3dzs.eu-west-1.rds.amazonaws.com:3306/totalcarefixdb
+    user: admin
+    password: 12345678
+    locations: filesystem:migrations
