--- a/.github/workflows/flyway.yml
+++ b/.github/workflows/flyway.yml
@@ -28,8 +28,10 @@ jobs:
           wget -qO- https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/10.8.1/flyway-commandline-10.8.1-linux-x64.tar.gz | tar xvz
           sudo ln -s $(pwd)/flyway-10.8.1/flyway /usr/local/bin/flyway
 
-      - name: Flyway Baseline
-        run: flyway baseline
+      - name: Flyway Clean and Baseline
+        run: |
+          flyway clean
+          flyway baseline
 
       - name: Flyway Migrate 
         run: flyway migrate 
