--- a/.github/workflows/flyway.yml
+++ b/.github/workflows/flyway.yml
@@ -1,25 +1,26 @@
 name: flyway
- 
 on:
   push:
-    branches: 
-      - main
- 
+    branches: [ main ]
 jobs:
   deploy:
     runs-on: ubuntu-latest
- 
+    defaults:
+      run:
+        working-directory: flyway
     env:
       FLYWAY_USER: admin
       FLYWAY_PASSWORD: 12345678
       FLYWAY_URL: jdbc:mysql://totalcarefix-instance.cannp7gu3dzs.eu-west-1.rds.amazonaws.com:3306/totalcarefixdb
       FLYWAY_CLEAN_DISABLED: false
       FLYWAY_LOCATIONS: "filesystem:./totalcarefix/"
+      flyway_environment: "totalcarefixdb"
       FLYWAY_CONFIG_FILES: "filesystem:./totalcarefix/flyway.toml"
- 
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Setup Flyway CLI
         run: |
           sudo apt update
@@ -27,13 +28,10 @@ jobs:
           wget -qO- https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/10.8.1/flyway-commandline-10.8.1-linux-x64.tar.gz | tar xvz
           sudo ln -s $(pwd)/flyway-10.8.1/flyway /usr/local/bin/flyway
 
-      - name: Flyway repair
+      - name: Flyway Clean and Baseline
         run: |
-          flyway repair
+          flyway clean
+          flyway baseline
+
       - name: Flyway Migrate 
-        run: |
-          flyway migrate \
-             -url="${FLYWAY_URL}" \
-            -user="${FLYWAY_USER}" \
-            -password="${FLYWAY_PASSWORD}" \
-            -configFiles="${FLYWAY_CONFIG_FILES}"
+        run: flyway migrate 
