--- a/flyway/totalcarefix/flyway.toml
+++ b/flyway/totalcarefix/flyway.toml
@@ -2,4 +2,4 @@
   url = "jdbc:mysql://totalcarefix-instance.cannp7gu3dzs.eu-west-1.rds.amazonaws.com:3306/totalcarefixdb"
   user = "admin"
   password = "12345678"
-  locations = "filesystem:migrations"
+  locations = "filesystem:script"
