--- a/.github/workflows/flyway.yml
+++ b/.github/workflows/flyway.yml
@@ -9,9 +9,9 @@ jobs:
       run:
         working-directory: flyway
     env:
-      FLYWAY_USER: admin
-      FLYWAY_PASSWORD: 12345678
-      FLYWAY_URL: jdbc:mysql://totalcarefix-instance.cannp7gu3dzs.eu-west-1.rds.amazonaws.com:3306/totalcarefixdb
+      FLYWAY_USER: ${{ secrets.username }}
+      FLYWAY_PASSWORD: ${{ secrets.password }}
+      FLYWAY_URL: ${{ secrets.dburl }}
       FLYWAY_CLEAN_DISABLED: false
       FLYWAY_LOCATIONS: "filesystem:./totalcarefix/"
       flyway_environment: "totalcarefixdb"
